<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">朗朗心</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="imagever_describe">说明</string>
    <string name="username">用户名</string>
    <string name="go_to_sleep">入睡时间</string>
    <string name="wake_up">睡醒时间</string>
    <string name="valid_sleep">有效睡眠</string>
    <string name="respiratory_arrest_count">呼吸过缓次数</string>
    <string name="turnover_count">翻身次数</string>
    <string name="Tachypnoea_count">呼吸过快次数</string>
    <string name="set_quit">退出登录</string>
    <string name="enter_the_main_interface">进入主界面</string>
    <string name="to_scan">重新扫描</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="rssi_ble">蓝牙信号: </string>
    <string name="voltage">设备电量：</string>
    <string name="tumblecount">跌倒</string>
    <string name="remind">提醒Ta动一下</string>
    <string name="stresscount">压力值</string>
    <string name="sleepcount">睡眠</string>
    <string name="step">步</string>
    <string name="soscount">报警次数</string>
    <string name="cifen">次/分</string>
    <string name="set">设置</string>
    <string name="share">分享</string>
    <string name="sensor">传感器位置</string>
    <string name="sure">确认</string>
    <string name="back">返回</string>
    <string name="parameter">参数</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="kll">卡路里</string>
    <string name="kllacc">卡路里累计</string>
    <string name="pose">姿态</string>
    <string name="poses">姿态</string>
    <string name="immunity">免疫力</string>
    <string name="activity_count">活动量</string>
    <string name="save">保存</string>
    <string name="password_edit">密码设置</string>
    <string name="about_soft">关于软件</string>
    <string name="action">开始</string>
    <string name="sleep">睡眠</string>
    <string name="finish">结束</string>
    <string name="second">第二页</string>
    <string name="count">次数：</string>
    <string name="limint">限度：</string>
    <string name="help">HELP</string>
    <string name="first">第一页</string>
    <string name="third">第三页</string>
    <string name="heart_rate">心率</string>
    <string name="ecg">心电</string>
    <string name="ecg_p">心电</string>
    <string name="cpu_message">点击查看CPU信息</string>
    <string name="run_count">计步数</string>
    <string name="own_cal">活动量</string>
    <string name="skin_t">体温</string>
    <string name="breathe_count">呼吸波</string>
    <string name="mental_stress">精神压力</string>
    <string name="music_name">歌曲名称</string>
    <string name="lyric">歌词</string>
    <string name="frends">朋友圈</string>
    <string name="my_message">我的信息</string>
    <string name="sport_edit">即时设置</string>
    <string name="exit">退出程序</string>
    <string name="function_edit">功能设置</string>
    <string name="accexe">累积设置</string>
    <string name="history_query">历史查询</string>
    <string name="music_play">歌曲播放</string>
    <string name="sport">运动</string>
    <string name="cpu_type">CPU型号：</string>
    <string name="cpu_nub">CPU核心数：</string>
    <string name="cpu_max">最高频率：</string>
    <string name="cpu_min">最低频率：</string>
    <string name="cpu_now">当前频率：</string>
    <string name="name">姓名</string>
    <string name="birthdate">出生日期</string>
    <string name="sex">性别</string>
    <string name="height">身高(cm)</string>
    <string name="weight">体重</string>
    <string name="add">家庭住址</string>
    <string name="province">当前城市</string>
    <string name="postcode">邮编</string>
    <string name="phone">联系人电话</string>
    <string name="mphone">联系人手机</string>
    <string name="save_message">补充信息</string>
    <string name="in_name">请输入姓名</string>
    <string name="in_birthdate">请输入出生日期</string>
    <string name="in_height">请输入身高</string>
    <string name="in_weight">请输入体重</string>
    <string name="in_add">请输入住址</string>
    <string name="in_province">请输入省份</string>
    <string name="in_postcode">请输入邮编</string>
    <string name="in_phone">请输入电话号码</string>
    <string name="in_mphone">请输入手机号码</string>
    <string name="in_save_message">请输入补充信息</string>
    <string name="male">男</string>
    <string name="woman">女</string>
    <string name="bluetooth_edit">蓝牙设置</string>
    <string name="user_name">用户名</string>
    <string name="device_number">设备号</string>
    <string name="password">密码</string>
    <string name="old_password">原始密码</string>
    <string name="new_password">新密码</string>
    <string name="sure_password">确认密码</string>
    <string name="login">登录</string>
    <string name="medline">医学文库</string>
    <string name="heart_rate_count">记录查看</string>
    <string name="alarm">紧急呼救</string>
    <string name="bluetooth">蓝牙</string>
    <string name="start_search">开始搜索</string>
    <string name="off">断开</string>
    <string name="send_data">发送</string>
    <string name="sya">说点什么呢?</string>
    <string name="langlang_music">朗朗音乐</string>
    <string name="ble_not_supported">蓝牙不支持</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="title_device">扫描蓝牙设备</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="initialize_pose">姿态初始化</string>
    <string name="register_name_digits">  _0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ  </string>
    <string name="check_updae_file_edt">数据文件上传设置</string>
    <string name="check__rssi_sound_edt">设备信号弱时声音提示</string>
    <string name="check_ble_sound_edt">设备断开时声音提示</string>
    <string name="check_gps_on_edt">GPS设置</string>
    <string name="check_login_on_edt">离线登录设置</string>
    <string name="check_equipment_edt">设备信息</string>
    <string name="later">稍后</string>
	<string name="at_once">立即</string>
	<string name="found_the_new_version_whether_to_update_now">发现新版本，是否立即更新</string>
	<string name="not_found_the_new_version">未发现新版本</string>
	<string name="not_wran">不再提醒</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_stop">停止</string>

</resources>