<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/found_the_new_version_whether_to_update_now"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/updateversion_check_warn_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_wran" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
              android:id="@+id/updateversion_later_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/later" />

        <Button
            android:id="@+id/updateversion_at_once_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/at_once" />
    </LinearLayout>

</LinearLayout>