<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dip"
        android:paddingTop="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/device_number"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/mymessage_devicenumber_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:text="LLN763D"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/mymessage_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/in_name"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/sensor"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/mymessage_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/red"
                android:visibility="gone" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/mysetting_locationes"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/birthdate"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/mymessage_date_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/sex"
                android:textColor="@color/white" />

            <RadioGroup
                android:id="@+id/mymessage_sex_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checkedButton="@+id/male"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/mymessage_male"
                    android:button="@drawable/radiobutton"
                    android:text="@string/male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/mymessage_wife"
                    android:button="@drawable/radiobutton"
                    android:text="@string/woman"
                    android:textColor="@color/white" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/height"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/mymessage_heght_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/in_height"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/weight"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/mymessage_weight_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/in_weight"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>
   <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/province"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/mymessage_province_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="13sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/add"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/mymessage_add_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/in_add"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/postcode"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/mymessage_postcode_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/in_postcode"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/phone"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/mymessage_phone_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/in_phone"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/mphone"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/mymessage_mphone_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/in_mphone"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/save_message"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/mymessage_else_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/in_save_message"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>
        <!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->

    </LinearLayout>

</ScrollView>